--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,4 +18,5 @@ spec:
       - name: costinsight
         image: aazammohammad193/costinsight:latest
         ports:
-        - containerPort: 3000
+        - name: http
+          containerPort: 3000
