--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,12 @@
-name: Build and Deploy to Kubernetes
+name: Build, Push, and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -14,20 +15,28 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: aazammohammad193/costinsight:latest
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/costinsight:latest
 
-    - name: Set up Kubeconfig
-      run: |
-        echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > kubeconfig.yaml
-        echo "KUBECONFIG=kubeconfig.yaml" >> $GITHUB_ENV
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Kubernetes context
+      uses: azure/k8s-set-context@v3
+      with:
+        method: kubeconfig
+        kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
 
     - name: Deploy to Kubernetes
       uses: azure/k8s-deploy@v4
@@ -35,4 +44,5 @@ jobs:
         manifests: |
           kubernetes/deployment.yaml
           kubernetes/service.yaml
-        namespace: default
+        images: |
+          ${{ secrets.DOCKER_HUB_USERNAME }}/costinsight:latest
